tests/ui/suggestions/suggest-ret-on-async-w-late.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-ret-on-async-w-late.rs:10:5
   |
LL | async fn ice(_: &i32) {
   |                      - help: try adding a return type: `-> bool`
LL |     true
   |     ^^^^ expected `()`, found `bool`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
